--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ obj/
 /packages/
 riderModule.iml
 /_ReSharper.Caches/
-/ChatRoom.sln
-/ChatBotWorker/appsettings.json
-/ChatBotWorker/appsettings.Development.json
+ChatRoom.sln
+ChatBotWorker/appsettings.json
+ChatBotWorker/appsettings.Development.json
